--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,7 @@
   --foreground-secondary-rgb: 75, 85, 99;
   --background-main-rgb: 255, 255, 255;
   --background-side-rgb: 214, 219, 220;
+  --nav-border-rgb: 200, 200, 200;
 
   --button-primary-background-rgb: 0, 0, 0;
   --button-primary-foreground-rgb: 255, 255, 255;
@@ -21,6 +22,11 @@
   --input-border-rgb: 200, 200, 200;
   --input-focus-border-rgb: 75, 85, 99;
   --input-hover-border-rgb: 0, 0, 0;
+
+  --progress-bar-bg-rgb: 180, 180, 180;
+  --progress-bar-min-outline-rgb: 30, 30, 30;
+  --progress-bar-shadow-rgb: 130, 130, 130;
+  --progress-bar-rgb: 90, 90, 90;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -29,6 +35,7 @@
     --foreground-secondary-rgb: 156, 163, 175;
     --background-main-rgb: 0, 0, 0;
     --background-side-rgb: 24, 24, 24;
+    --nav-border-rgb: 75, 85, 99;
 
     --button-primary-background-rgb: 255, 255, 255;
     --button-primary-foreground-rgb: 0, 0, 0;
@@ -43,6 +50,11 @@
     --input-border-rgb: 75, 85, 99;
     --input-focus-border-rgb: 107, 114, 128;
     --input-hover-border-rgb: 255, 255, 255;
+
+    --progress-bar-bg-rgb: 30, 30, 30;
+    --progress-bar-min-outline-rgb: 200, 200, 200;
+    --progress-bar-shadow-rgb: 90, 90, 90;
+    --progress-bar-rgb: 160, 160, 160;
   }
 }
 
@@ -59,6 +71,8 @@ body {
 nav {
   color: rgb(var(--foreground-rgb));
   background: rgb(var(--background-main-rgb));
+  border-top: 1px solid;
+  border-color: rgb(var(--nav-border-rgb));
 }
 
 .text-secondary {
@@ -90,8 +104,6 @@ input {
   color: rgb(var(--input-text-rgb));
   border: 1px solid;
   border-color: rgb(var(--input-border-rgb));
-  /* padding: 0.5rem;
-  border-radius: 0.375rem; */
   transition: border-color 0.3s;
 }
 
@@ -112,6 +124,23 @@ input::-webkit-inner-spin-button {
 
 input[type=number] {
   -moz-appearance: textfield;
+}
+
+.progress-bar-background {
+  background-color: rgb(var(--progress-bar-bg-rgb));
+}
+
+.progress-bar-min {
+  border-right: 1.5px solid;
+  border-color: rgb(var(--progress-bar-min-outline-rgb));
+}
+
+.progress-bar-shadow {
+  background-color: rgb(var(--progress-bar-shadow-rgb));
+}
+
+.progress-bar-value {
+  background-color: rgb(var(--progress-bar-rgb));
 }
 
 @layer utilities {
