--- a/app/globals.css
+++ b/app/globals.css
@@ -85,7 +85,7 @@ nav {
   background-color: rgb(var(--button-hover-secondary-background-rgb));
 }
 
-input {
+input, textarea {
   background-color: rgb(var(--input-bg-rgb));
   color: rgb(var(--input-text-rgb));
   border: 1px solid;
@@ -94,6 +94,7 @@ input {
   border-radius: 0.375rem; */
   transition: border-color 0.3s;
 }
+
 
 input:focus {
   border-color: rgb(var(--input-focus-border-rgb));
