--- a/app/globals.css
+++ b/app/globals.css
@@ -65,7 +65,6 @@ html {
 body {
   color: rgb(var(--foreground-rgb));
   background: rgb(var(--background-main-rgb));
-    
 }
 
 nav {
@@ -146,6 +145,13 @@ input[type=number] {
 .tag {
   background-color: rgb(var(--button-primary-background-rgb));
   color: rgb(var(--button-primary-foreground-rgb));
+}
+
+.alert {
+  color: rgb(var(--foreground-rgb));
+  background: rgb(var(--background-main-rgb));
+  border: 1px solid;
+  border-color: rgb(var(--input-border-rgb));
 }
 
 @layer utilities {
